# Tracewright

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/generic_example/: agent.py  tests.yaml
examples/smolagents_example/: agent.py  tests.yaml
tests/: test_assertions.py  test_runner.py  test_trajectory.py
tracewright/: assertions.py  cli.py  reporter.py  runner.py  store.py  trajectory.py
tracewright/adapters/: __init__.py  base.py  generic.py  smolagents.py
