[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracewright"
version = "0.1.0"
description = "Playwright for AI agents — test trajectories, not just outputs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "openai>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
smolagents = ["smolagents>=1.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
]

[project.scripts]
tw = "tracewright.cli:main"

[project.urls]
Repository = "https://github.com/snagarageri/Tracewright"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["tracewright"]
